bridge/base/0-maude-report-main-namespace.yaml
#! 0-MAUDEMetrics-namespace.yaml
# Generated code, do not edit
apiVersion: v1
kind: Namespace
metadata:
    name: maudemetrics
    labels:
        com.docker.compose.project: MAUDEMetrics
