bridge/base/flask_app-expose.yaml
#! flask_app-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: flask-app
    namespace: maudemetrics
    labels:
        com.docker.compose.project: MAUDEMetrics
        com.docker.compose.service: flask_app
spec:
    selector:
        com.docker.compose.project: MAUDEMetrics
        com.docker.compose.service: flask_app
    ports:
        - name: flask-app-5005
          port: 5005
          targetPort: flask-app-5005
