bridge/base/flask_app-service.yaml
# check if there is at least one published port

#! flask_app-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: flask-app-published
    namespace: maudemetrics
    labels:
        com.docker.compose.project: MAUDEMetrics
        com.docker.compose.service: flask_app
spec:
    selector:
        com.docker.compose.project: MAUDEMetrics
        com.docker.compose.service: flask_app
    ports:
        - name: flask-app-5005
          port: 5005
          protocol: TCP
          targetPort: flask-app-5005
